created and connect database

--- a/horoscope/templates/horoscope/sign_zodiac.html
+++ b/horoscope/templates/horoscope/sign_zodiac.html
@@ -10,9 +10,9 @@
 {% block content %}
   <div class="content">
     <h1>Гороскоп на сегодня для {{ sign }}</h1>
-    <p>"Бла бла бла бла бла "Здесь отображается астрологический прогноз для выбранного знака зодиака
-      на сеголняшний день. Для получения информации о счастливом числе нажмите кнопку снизу.
-    </p>
-    <a href="#" class="btn">Счастливое число</a>
+    <p>{{ description }}</p>
+    <a href="#" class="btn">Счастливое число: {{ lucky_number }}</a>
+    <a href="#" class="btn">Сегодняшний цвет: {{ color }}</a>
+    <a href="#" class="btn">Сегодня: {{ date }}</a>
   </div>
 {% endblock %}
