--- a/horoscope/templates/horoscope/base.html
+++ b/horoscope/templates/horoscope/base.html
@@ -20,7 +20,7 @@
                 <li><a href="#">О проекте</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
-            <a href="#" class="btn">Вход / Регистрация</a>
+            <a href="/admin/" class="btn">Вход / Регистрация</a>
         </nav>
 
         {% block content %}
