--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -1,6 +1,10 @@
 {% extends 'horoscope/base.html' %}
 {% load static %}
 
+{% block title %}
+    <title>{{ title }}</title>
+{% endblock %}
+
 {% block css %}
     <link rel="stylesheet" href="{% static 'base_style.css' %}">
 {% endblock %}
