--- a/horoscope/templates/horoscope/sign_zodiac.html
+++ b/horoscope/templates/horoscope/sign_zodiac.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 
+{% block title %}
+    <title>{{ title }}</title>
+{% endblock %}
+
 {% block css %}
     <link rel="stylesheet" href="{% static 'base_style.css' %}">
 {% endblock %}
