start users authentication 2

--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -9,6 +9,59 @@
     <link rel="stylesheet" href="{% static 'base_style.css' %}">
 {% endblock %}
 
+{% block nav %}
+    <div class="zodiac-signs">
+            <div class="icons">
+                <div class="icon"><a href="/aries/"><img src="{% static 'img/aries.png' %}" alt="" class="fab"></a></div>
+                <a href="/aries/" class="icon-text">Овен</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/taurus/"><img src="{% static 'img/taurus.png' %}" alt="" class="fab"></a></div>
+                <a href="/taurus/" class="icon-text">Телец</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/gemini/"><img src="{% static 'img/gemini.png' %}" alt="" class="fab"></a></div>
+                <a href="/gemini/" class="icon-text">Близнецы</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/cancer/"><img src="{% static 'img/cancer.png' %}" alt="" class="fab"></a></div>
+                <a href="/cancer/" class="icon-text">Рак</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/leo/"><img src="{% static 'img/leo.png' %}" alt="" class="fab"></a></div>
+                <a href="/leo/" class="icon-text">Лев</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/virgo/"><img src="{% static 'img/virgo.png' %}" alt="" class="fab"></a></div>
+                <a href="/virgo/" class="icon-text">Дева</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/libra/"><img src="{% static 'img/libra.png' %}" alt="" class="fab"></a></div>
+                <a href="/libra/" class="icon-text">Весы</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/scorpio/"><img src="{% static 'img/scorpio.png' %}" alt="" class="fab"></a></div>
+                <a href="/scorpio/" class="icon-text">Скорпион</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/sagittarius/"><img src="{% static 'img/sagittarius.png' %}" alt="" class="fab"></a></div>
+                <a href="/sagittarius/" class="icon-text">Стрелец</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/capricorn/"><img src="{% static 'img/capricorn.png' %}" alt="" class="fab"></a></div>
+                <a href="/capricorn/" class="icon-text">Козерог</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/aquarius/"><img src="{% static 'img/aquarius.png' %}" alt="" class="fab"></a></div>
+                <a href="/aquarius/" class="icon-text">Водолей</a>
+            </div>
+            <div class="icons">
+                <div class="icon"><a href="/pisces/"><img src="{% static 'img/pisces.png' %}" alt="" class="fab"></a></div>
+                <a href="/pisces/" class="icon-text">Рыбы</a>
+            </div>
+    </div>
+{% endblock %}
+
 
 
 
