--- a/horoscope/templates/horoscope/sign_zodiac.html
+++ b/horoscope/templates/horoscope/sign_zodiac.html
@@ -1,4 +1,4 @@
-{% extends 'horoscope/base.html' %}
+{% extends 'horoscope/index.html' %}
 {% load static %}
 
 
@@ -20,3 +20,5 @@
     <a href="#" class="btn">Сегодня: {{ date }}</a>
   </div>
 {% endblock %}
+
+
