start users authentication 3

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,7 +16,7 @@
     <input type="password" name="" placeholder="Пароль">
     <input type="submit" name="" value="Войти">
     <div>
-        Нет аккаунта? <a href="#">Зарегистрируйтесь</a>
+        Нет аккаунта? <a href="registration/">Зарегистрируйтесь</a>
     </div>
 </div>
 {% endblock %}
