--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,7 +16,7 @@
     {{ form.username }}
     {{ form.password }}
     <input type="submit" name="" value="Войти">
-    <div>
+    <div class="question">
         Нет аккаунта? <a href="registration/">Зарегистрируйтесь</a>
     </div>
 </form>
