--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -21,7 +21,7 @@
     {{ form.password1 }}
     {{ form.password2 }}
     <input type="submit" name="" value="Регистрация">
-    <div>
+    <div class="question">
         Уже есть аккаунт? <a href="/login/">Войдите</a>
     </div>
 </form>
