--- a/horoscope/templates/horoscope/base.html
+++ b/horoscope/templates/horoscope/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %} {% endblock %}
+    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     {% block css %} {% endblock %}
 </head>
 <body>
