--- a/horoscope/templates/horoscope/sign_zodiac.html
+++ b/horoscope/templates/horoscope/sign_zodiac.html
@@ -13,11 +13,11 @@
 
 {% block content %}
   <div class="content">
-    <h1>Гороскоп на сегодня для {{ sign }}</h1>
-    <p>{{ description }}</p>
-    <a href="#" class="btn">Счастливое число: {{ lucky_number }}</a>
-    <a href="#" class="btn">Сегодняшний цвет: {{ color }}</a>
-    <a href="#" class="btn">Сегодня: {{ date }}</a>
+      <h2>{{ sign }}</h2>
+      <h1>Гороскоп на сегодня</h1>
+      <p>{{ description }}</p>
+      <a href="#" class="btn">Счастливое число: {{ lucky_number }}</a>
+      <a href="#" class="btn">Сегодняшний цвет: {{ color }}</a>
   </div>
 {% endblock %}
 
