--- a/static/base_style.css
+++ b/static/base_style.css
@@ -74,6 +74,11 @@ nav ul li a:hover {
     font-size: 60px;
 }
 
+.content h2 {
+    margin-bottom: 50px;
+    font-size: 40px;
+}
+
 .content p {
     font-size: 18px;
     line-height: 24px;
@@ -134,59 +139,3 @@ nav ul li a:hover {
     min-width: 100px;
 }
 
-.box {
-    width: 350px;
-    padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: #edeaea;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    border-radius: 24px;
-}
-
-.box h1 {
-    color: #000;
-    text-transform: uppercase;
-    font-weight: 500;
-}
-.box input[type = "text"],.box input[type = "password"]{
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #000;
-    padding: 14px 10px;
-    width: 180px;
-    outline: none;
-    color: #000;
-    border-radius: 24px;
-    transition: 0.25s;
-}
-
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-    width: 220px;
-    border-color: rgba(39, 72, 235, 0.922);
-}
-
-.box input[type = "submit"]{
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid rgb(25, 255, 17);
-    padding: 14px 40px;
-    outline: none;
-    color: #000;
-    border-radius: 24px;
-    transition: 0.25s;
-    cursor: pointer;
-}
-
-.box input[type = "submit"]:hover{
-    background: rgb(25, 255, 17);
-}
