about, contacts, editing

--- a/horoscope/templates/horoscope/sign_zodiac.html
+++ b/horoscope/templates/horoscope/sign_zodiac.html
@@ -16,8 +16,11 @@
       <h2>{{ sign }}</h2>
       <h1>Гороскоп на сегодня</h1>
       <p>{{ description }}</p>
-      <a href="#" class="btn">Счастливое число: {{ lucky_number }}</a>
-      <a href="#" class="btn">Сегодняшний цвет: {{ color }}</a>
+      <h4 href="" class="info">Счастливое число: {{ lucky_number }}</h4>
+      <h4 href="" class="info">Сегодняшний цвет: {{ color }}</h4>
+      <a href="love/" class="btn">Любовь</a>
+      <a href="work/" class="btn">Работа</a>
+      <a href="money/" class="btn">Деньги</a>
   </div>
 {% endblock %}
 
