--- a/horoscope/templates/horoscope/base.html
+++ b/horoscope/templates/horoscope/base.html
@@ -18,10 +18,10 @@
 
             <ul>
                 <li><a href="/">Главная</a></li>
-                <li><a href="#">О проекте</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="/about/">О проекте</a></li>
+                <li><a href="/contacts/">Контакты</a></li>
             </ul>
-            <a href="/login/" class="btn">Вход / Регистрация</a>
+            <a href="/login/" class="login">Вход / Регистрация</a>
         </nav>
         {% block login %}
 
