--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -62,6 +62,14 @@
     </div>
 {% endblock %}
 
+{% block content %}
+  <div class="content">
+      <h1>Ежедневный гороскоп</h1>
+      <h2>Узнайте, что ваш знак зодиака приготовил для вас сегодня.</h2>
+      <h3>Выберете свой знак зодиака на панели слева</h3>
+  </div>
+{% endblock %}
+
 
 
 
